tests/snapshots/e2e__feature_tests__use_on_cd_nvmrc__Bash.snap
---
source: tests/e2e.rs
expression: "&source.trim()"
---
set -e
shopt -s expand_aliases

eval "$(fnm env --use-on-cd)"
mkdir inner_path
echo v8.11.3 > inner_path/.nvmrc
fnm install v8.11.3
cd inner_path
if [ "$(node -v)" != "v8.11.3" ]; then
    echo 'Expected Node version to be "v8.11.3", Got: '"$(node -v)"
    exit 1
fi
